# CopyCut

./: .gitignore  CMakeLists.txt  README.md
src/: BusyTaskDialog.py  CopyCut.py  DragHintWidget.py  FFmpegVideoAnalyzer.py  KeyFrameControl.py  MainWindow.cpp  MainWindow.hpp  MainWindow.py  StreamCopyCutter.cpp  StreamCopyCutter.hpp  StreamSourceController.py  Util.py  VideoAnalyzer.py  VideoWidget.py  main.cpp
